# desafio-itau-backend-em-python

./: .gitignore  .pre-commit-config.yaml  PROJECT.md  README.md  pyproject.toml
itau_api/: main.py
itau_api/api/v1/endpoints/: transaction.py
itau_api/api/v1/schemas/: transaction.py
itau_api/domain/models/: transaction.py
itau_api/domain/services/: statistic_service.py
itau_api/infrastructure/repositories/: transaction_mem_repo.py
tests/unit/: test_read_root.py
